--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ buildscript {
 
 plugins {
     id "io.gitlab.arturbosch.detekt" version "1.0.0-RC16"
+    id "com.github.ben-manes.versions" version "0.21.0"
 }
 allprojects {
     apply from: "$rootDir/ktlint.gradle"
