--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
-    ext.kotlin_version = '1.3.31'
+    ext.kotlinVersion = '1.3.21'
+
     repositories {
         google()
         jcenter()
@@ -9,7 +9,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.4.2'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -19,6 +19,10 @@ plugins {
     id "io.gitlab.arturbosch.detekt" version "1.0.0-RC16"
     id "com.github.ben-manes.versions" version "0.21.0"
 }
+
+apply from: 'dependencies.gradle'
+
+
 allprojects {
     apply from: "$rootDir/ktlint.gradle"
     apply from: "$rootDir/detekt.gradle"
