--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-buildscript {
+buildscript { 
+    ext.kotlin_version = '1.3.31'
+
     ext.kotlinVersion = '1.3.21'
 
     repositories {
@@ -12,7 +14,7 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
-    }
+    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version" }
 }
 
 plugins {
@@ -39,4 +41,3 @@ task clean(type: Delete) {
 }
 
 task x(type: GradleBuild) { tasks = ["detekt", "ktlint", "lintDebug", "testDebugUnitTest"] }
-
