--- a/data/build.gradle
+++ b/data/build.gradle
@@ -48,8 +48,8 @@ dependencies {
 
 
     // test
-//    testImplementation dataTestDependencies.junit
-//    testImplementation dataTestDependencies.mockito
+    testImplementation dataTestDependencies.junit
+    testImplementation dataTestDependencies.mockitoKotlin
 //    androidTestImplementation dataTestDependencies.testRunner
 //    testImplementation dataTestDependencies.room
 
