add unit tests for usersposts use case and comments usecase

--- a/data/build.gradle
+++ b/data/build.gradle
@@ -68,7 +68,7 @@ dependencies {
     androidTestImplementation dataTestDependencies.androidTestCore
 
 //    testImplementation dataTestDependencies.roomTesting
-    androidTestImplementation dataTestDependencies.espressoCore
+//    androidTestImplementation dataTestDependencies.espressoCore
 //    androidTestImplementation dataTestDependencies.espressoContrib
 //    androidTestImplementation dataTestDependencies.espressoIdlingResource
 
