--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -11,10 +11,11 @@ dependencies {
     implementation domainDependencies.rxAndroid
     implementation domainDependencies.rxJava
 
-
     // test
-//    testImplementation domainTestDependencies.junit
-//    testImplementation domainTestDependencies.mockito
+    testImplementation domainTestDependencies.junit
+    testImplementation domainTestDependencies.mockitoKotlin
+    implementation 'junit:junit:4.12'
+
 }
 repositories {
     mavenCentral()
