--- a/data/build.gradle
+++ b/data/build.gradle
@@ -62,10 +62,12 @@ dependencies {
     testImplementation dataTestDependencies.mockitoKotlin
 
 
-    androidTestImplementation dataTestDependencies.testRunner
-    androidTestImplementation dataTestDependencies.testRules
-//    androidTestImplementation dataTestDependencies.supportAnnotations
-    androidTestImplementation dataTestDependencies.androidTestCore
+//    androidTestImplementation dataTestDependencies.junit
+//    androidTestImplementation dataTestDependencies.testRunner
+//    androidTestImplementation dataTestDependencies.testRules
+//    androidTestImplementation dataTestDependencies.androidTestCore
+//    androidTestImplementation dataTestDependencies.mockitoKotlin
+
 
 //    testImplementation dataTestDependencies.roomTesting
 //    androidTestImplementation dataTestDependencies.espressoCore
