--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,7 +32,11 @@ jobs:
       - run:
           name: Run Unit Tests
           command: ./gradlew testDebugUnitTest
+      - store_artifacts:
+          path: build/reports
+      - store_test_results:
+          path: build/test-results
       - save_cache:
           paths:
             - ~/.gradle
-          key: gradle-{{ checksum "build.gradle" }}-{{ checksum  "buildSrc/src/main/java/Dependencies.kt" }}-{{ checksum  "gradle/wrapper/gradle-wrapper.properties" }}
+          key: gradle-{{ checksum "build.gradle" }}-{{ checksum  "dependencies.gradle" }}-{{ checksum  "gradle/wrapper/gradle-wrapper.properties" }}
