--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,9 +33,17 @@ jobs:
           name: Run Unit Tests
           command: ./gradlew testDebugUnitTest
       - store_artifacts:
-          path: build/reports
+          path: data/build/reports
       - store_test_results:
-          path: build/test-results
+          path: data/build/test-results
+      - store_artifacts:
+          path: domain/build/reports
+      - store_test_results:
+          path: domain/build/test-results
+      - store_artifacts:
+          path: presentation/build/reports
+      - store_test_results:
+          path: presentation/build/test-results
       - save_cache:
           paths:
             - ~/.gradle
